syntax = "proto3";
option go_package = "/gen";

message InnocentPicture {
  string id = 1;
  bytes data = 2;
}

message Thankyou {
  string id = 1;
  bytes anotherPicture = 2;
}

message GetPictureParameters {}

message ThankyouOutput{}

service PictureSharing {
  rpc GetPicture(GetPictureParameters) returns (InnocentPicture);
  rpc SayThankyou(Thankyou) returns (ThankyouOutput);
}

message DishMemeParamaters {
  string payload = 1;
}

message DishMemeResponse {
  string id = 1;
}

message CheckMemeStatusParameters {
  string id = 1;
}

message CheckMemeStatusResponse {
  string status = 1;
  bytes response = 2;
}

service MemeDealer {
  rpc DishMeme(DishMemeParamaters) returns (DishMemeResponse);
  rpc GetMemeStatus(CheckMemeStatusParameters) returns (CheckMemeStatusResponse);
}